# Tic-Tac-Toe

./: Board_test.cpp  CMakeLists.txt  PERFORMANCE_TESTING.md  README.md
.github/workflows/: build-and-test.yml  ci.yml  release.yml
Board/: CMakeLists.txt
Board/src/: Board.h  main.cpp
Board/tests/: test_board.cpp
Game/: CMakeLists.txt
Game/AI/: CMakeLists.txt
Game/AI/test/: test_AI.cpp
Game/Board/: CMakeLists.txt
Game/Board/src/: Board.h
Game/GUI/: CMakeLists.txt
Game/GUI/Tests/: test_GameWindow.cpp
Game/GUI/src/: GameWindow.cpp  GameWindow.h
Game/Globals/: CMakeLists.txt  globals.h
Game/src/: main.cpp
Globals/: globals.cpp
app/: CMakeLists.txt
app/resources/: app.ico.txt  app.manifest  app.rc  launch_tictactoe.bat  launch_tictactoe.ps1
app/src/: login_page.cpp  login_page.h  main.cpp  main_window.cpp  main_window.h
app/tests/: CMakeLists.txt  test_login_page.cpp  test_main_window.cpp
cmake/: CommonSettings.cmake
components/auth/: CMakeLists.txt
components/auth/src/auth/: user_auth.cpp
components/auth/src/db/: database.h
components/auth/tests/: test_database.cpp  test_user_auth.cpp
components/game/: CMakeLists.txt
components/game/AI/: CMakeLists.txt
components/game/AI/src/: AI.cpp  AI.h
components/game/Board/: CMakeLists.txt
components/game/Board/src/: Board.cpp
components/game/GUI/: CMakeLists.txt
components/game/GUI/src/: GameWindow.h
components/game/GUI/tests/: test_GameWindow.cpp
components/game/Globals/: CMakeLists.txt
components/game_history/: CMakeLists.txt
components/game_history/src/: game_history.cpp  game_history.h
components/game_history/tests/: test_game_history.cpp
components/gui/: CMakeLists.txt
components/gui/src/: application.cpp  application.h  game_history_gui.cpp  game_history_gui.h  game_window.cpp  game_window.h  login_page.cpp  login_page.h  main_window.cpp  main_window.h  ui_constants.h
components/gui/tests/: test_game_history_gui.cpp  test_game_window.cpp  test_login_page.cpp  test_main_window.cpp
game_history/tic-tac-toe/: CMakeLists.txt
game_history/tic-tac-toe-history/: CMakeLists.txt  main.cpp
game_history/tic-tac-toe-history/include/: game_history.h  game_history_gui.h
game_history/tic-tac-toe-history/src/: game_history.cpp  game_history.h  game_history_gui.cpp  gui_main.cpp  main.cpp
game_history/tic-tac-toe-history/test/: CMakeLists.txt  game_history_test.cpp  test_game_history.cpp
game_history/tic-tac-toe/src/: ai_player.cpp  ai_player.h  database.cpp  database.h  game.cpp  game.h  main.cpp  player.cpp  player.h
game_history/tic-tac-toe/test/: CMakeLists.txt  test_game.cpp
game_history/tic_tac_toe_history/src/: game_history.h
performance/: CMakeLists.txt  README.md  generate_report.cpp  gui_performance_test.cpp  performance_monitor.cpp  performance_monitor.h  performance_test.cpp  run_gui_performance_tests.sh  run_performance_tests.sh
src/: Board.cpp  Board.h  CMakeLists.txt  calculator.cpp  main.cpp
tests/: CMakeLists.txt  calculator_test.cpp  test_board.cpp
tests/integration/: CMakeLists.txt  test_database_integration.cpp  test_game_workflows.cpp  test_gui_integration.cpp
tic_tac_toe_history/: CMakeLists.txt
tic_tac_toe_history/src/: database.cpp  database.h  game_history.cpp  game_history.h  main.cpp
tic_tac_toe_history/tests/: CMakeLists.txt  test_database.cpp  test_game_history.cpp
user_auth/: CMakeLists.txt
user_auth/src/: background_widget.cpp  background_widget.h  login_page.cpp  login_page.h  main.cpp  main_window.cpp  main_window.h  welcome_page.cpp  welcome_page.h
user_auth/src/auth/: user_auth.cpp  user_auth.h
user_auth/src/db/: database.cpp  database.h
user_auth/tests/: CMakeLists.txt  main_test.cpp  test_database.cpp  test_login_page.cpp  test_login_page.h  test_main_window.cpp  test_main_window.h  test_user_auth.cpp  test_welcome_page.cpp  test_welcome_page.h
